# osync_conf_render

./: .gitignore  README.md  conf.example.yaml  pyproject.toml
osync_conf_render/: __main__.py
templates/: osync.conf.j2
